feat: Update theme and colors for a warmer palette
Refactors the application's color scheme to use a warmer, more inviting palette. This includes updating Tailwind CSS theme configuration, adjusting background and text colors across various components (SessionCard, ExerciseCard, SessionPlanner) to align with the new theme.

Additionally, a minor fix is applied to GeminiService to ensure `process.env.API_KEY` is accessed safely, especially in browser environments where `process` might not be defined.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
           extend: {
             colors: {
               gym: {
-                900: '#0f172a',
-                800: '#1e293b',
-                700: '#334155',
-                accent: '#3b82f6',
+                900: '#F7E6CA', /* Champagne (Main Background) */
+                800: '#FFF8ED', /* Cream/Light Champagne (Cards) */
+                700: '#FED7AA', /* Orange-200 (Borders) */
+                600: '#FB923C', /* Orange-400 */
+                accent: '#F97316', /* Vibrant Orange (Buttons) */
+                secondary: '#EA580C', /* Burnt Orange */
+                text: '#431407', /* Dark Brown/Orange (Main Text) */
+                muted: '#9A3412', /* Rust (Secondary Text) */
                 success: '#10b981',
                 warning: '#f59e0b',
                 danger: '#ef4444',
@@ -35,8 +39,8 @@
           scrollbar-width: none;  /* Firefox */
       }
       body {
-        background-color: #0f172a;
-        color: #f8fafc;
+        background-color: #F7E6CA;
+        color: #431407;
         overscroll-behavior-y: none; /* Prevent pull-to-refresh on mobile */
       }
     </style>
