--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -43,6 +44,12 @@
         color: #431407;
         overscroll-behavior-y: none; /* Prevent pull-to-refresh on mobile */
       }
+
+      /* 3D Flip Utilities */
+      .perspective-1000 { perspective: 1000px; }
+      .transform-style-3d { transform-style: preserve-3d; }
+      .backface-hidden { backface-visibility: hidden; }
+      .rotate-y-180 { transform: rotateY(180deg); }
     </style>
   <script type="importmap">
 {
