feat: Refactor storage and update UI colors
Removes Supabase integration and reverts to local storage for session and template management. This simplifies the application's dependencies and local-first approach.

Additionally, updates UI colors to use lighter shades of cream and white for the background and cards, improving contrast and aesthetic. Updates dependency versions in package.json and package-lock.json.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
           extend: {
             colors: {
               gym: {
-                900: '#F7E6CA', /* Champagne (Main Background) */
-                800: '#FFF8ED', /* Cream/Light Champagne (Cards) */
+                900: '#FAF3E0', /* Updated Main Background (Light Cream/Beige) */
+                800: '#FFFFFF', /* White (Cards) for better contrast */
                 700: '#FED7AA', /* Orange-200 (Borders) */
                 600: '#FB923C', /* Orange-400 */
                 accent: '#F97316', /* Vibrant Orange (Buttons) */
@@ -40,7 +40,7 @@
           scrollbar-width: none;  /* Firefox */
       }
       body {
-        background-color: #F7E6CA;
+        background-color: #FAF3E0;
         color: #431407;
         overscroll-behavior-y: none; /* Prevent pull-to-refresh on mobile */
       }
